<resources>
    <string name="app_name">EncryptionBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="action_encryption">Encrypt</string>
    <string name="action_decryption">Decrypt</string>
    <string name="TAG">error message</string>
    <string name="enter_details">Please enter your details</string>
    <string name="enter_name_button">Please enter your name</string>
    <string name="calling_activity_message">calling_activity_message</string>
    <string name="go_get_the_string">go and get the name</string>
    <string name="go_get_it">go get it</string>
    <string name="the_users_name_was">The Users Name was</string>
    <string name="Main_Menu">Main Menu</string>
    <string name="how_to_use">how to use this app</string>
    <string name="aboutMessage">EncryptionBuddy is a simple and straight forward Encryption App
    that allows you to send secret text messages to people with a password to unlock the message
    Encrypt is to create the secret message and Decrypt is to reveal the secret message</string>
    <string name="by">By</string>
    <string name="rees">Rees Ringrose</string>

</resources>
