<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="comreesringrose.httpsgithub.encryptionbuddy.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:title="@string/Main_Menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_encryption"
        android:orderInCategory="2"
        android:title="@string/action_encryption"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_decryption"
        android:orderInCategory="3"
        android:title="@string/action_decryption"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="4"
        android:title="@string/how_to_use"
        app:showAsAction="never" />
</menu>
