<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="comreesringrose.httpsgithub.encryptionbuddy.MainActivity"
    android:background="@drawable/newback">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="125dp"
            app:srcCompat="@drawable/lockclosed"
            android:id="@+id/imageView6"
            android:onClick="encryptbutton"/>

        <TextView
            android:text="@string/action_encryption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:onClick="encryptbutton"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="164dp"
            app:srcCompat="@drawable/lockopened"
            android:id="@+id/imageView7"
            android:onClick="decryptbutton"/>


        <TextView
            android:text="@string/action_decryption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView1"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:onClick="decryptbutton"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="105dp"
            app:srcCompat="@drawable/light"
            android:id="@+id/imageView"
            android:onClick="about"/>

        <TextView
            android:text="@string/how_to_use"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView4"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textAlignment="center"
            android:onClick="about"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
